# imperial_genetic_algorithm_group_project

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Problem Statement for Genetic Algorithms Project 2025.txt  README.md  README_old.md  build.sh  clean.sh  parameters.txt  run.sh  run_tests.sh  test_ga  test_genetic_algorithm  testperformance.sh
.github/workflows/: lint.yml  run_tests.yml
docs/: data_structures.md  development_guide.md
docs/doxygen_html/html/: annotated.html  classes.html  dir_000002_000001.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_vars.html  namespaces.html  pages.html
docs/doxygen_html/html/d0/d30/: md_README.html
docs/doxygen_html/html/d0/d7c/: CSimulator_8h__dep__incl.md5
docs/doxygen_html/html/d0/d8a/: Genetic__Algorithm_8cpp__incl.md5
docs/doxygen_html/html/d0/dbd/: CCircuit_8cpp.html
docs/doxygen_html/html/d1/d17/: structSimulator__Parameters__coll__graph.md5
docs/doxygen_html/html/d1/d4a/: structAlgorithm__Parameters.html
docs/doxygen_html/html/d1/dae/: CCircuit_8h__incl.md5
docs/doxygen_html/html/d2/d2b/: Config_8h__incl.md5
docs/doxygen_html/html/d2/d66/: CSimulator_8cpp__incl.md5
docs/doxygen_html/html/d2/d6f/: constants_8h.html  constants_8h_source.html
docs/doxygen_html/html/d2/d78/: CCircuit_8h__dep__incl.md5
docs/doxygen_html/html/d2/dbf/: CUnit_8h.html  CUnit_8h_source.html
docs/doxygen_html/html/d3/d07/: classCircuitVector.html
docs/doxygen_html/html/d3/d80/: classCircuitVector__coll__graph.md5
docs/doxygen_html/html/d3/d91/: CCircuit_8cpp__incl.md5
docs/doxygen_html/html/d5/d06/: Genetic__Algorithm_8h.html  Genetic__Algorithm_8h_a28fa91744ea10ea8dcf2a66d48734f2c_icgraph.md5  Genetic__Algorithm_8h_a3b3f8316f461c33a8d26fa097af49a0e_icgraph.md5  Genetic__Algorithm_8h_a3fe120b912af995c900f57635bf63b6b_cgraph.md5  Genetic__Algorithm_8h_acd197fda96fda46bf95c689fb2c438c0_cgraph.md5  Genetic__Algorithm_8h_source.html
docs/doxygen_html/html/d5/d25/: md_docs_2development__guide.html
docs/doxygen_html/html/d5/ddd/: CUnit_8h__dep__incl.md5
docs/doxygen_html/html/d5/de3/: Config_8h.html  Config_8h_a82e54ebeaac0a69bdf466946163c0ea5_icgraph.md5  Config_8h_source.html
docs/doxygen_html/html/d6/d3a/: circuit__vector_8h.html  circuit__vector_8h_source.html
docs/doxygen_html/html/d6/dff/: CCircuit_8h.html  CCircuit_8h_source.html
docs/doxygen_html/html/d7/d21/: CUnit_8cpp__incl.md5
docs/doxygen_html/html/d7/dc8/: structOptimizationResult.html
docs/doxygen_html/html/d9/d7c/: namespaceConstants.html
docs/doxygen_html/html/d9/d81/: namespaceConstants_1_1GA.html
docs/doxygen_html/html/d9/dbc/: namespaceConstants_1_1Economic.html
docs/doxygen_html/html/d9/dcf/: md_docs_2data__structures.html
docs/doxygen_html/html/d9/de5/: circuit__vector_8h__incl.md5
docs/doxygen_html/html/d9/ded/: data__structures_8md.html
docs/doxygen_html/html/da/d54/: namespaceConstants_1_1Circuit.html
docs/doxygen_html/html/da/d9b/: CSimulator_8h.html  CSimulator_8h_a81824f15677e1c64a9aa7dc7d5f6f67e_icgraph.md5  CSimulator_8h_source.html
docs/doxygen_html/html/da/daa/: classCUnit.html
docs/doxygen_html/html/da/dce/: main_8cpp__incl.md5
docs/doxygen_html/html/da/ddd/: README_8md.html
docs/doxygen_html/html/db/d08/: classCUnit__coll__graph.md5
docs/doxygen_html/html/db/dbb/: namespaceConstants_1_1Physical.html
docs/doxygen_html/html/dc/d67/: CUnit_8h__incl.md5
docs/doxygen_html/html/dc/d9e/: structOptimizationResult__coll__graph.md5
docs/doxygen_html/html/dc/de2/: CUnit_8cpp.html
docs/doxygen_html/html/dc/dfd/: CSimulator_8cpp.html  CSimulator_8cpp_a4b2d88399b61d21ccd27c7137f81ee9c_cgraph.md5  CSimulator_8cpp_a4b2d88399b61d21ccd27c7137f81ee9c_icgraph.md5  CSimulator_8cpp_af32f8fbb3b49d0f987d8cf1548d9cbcc_cgraph.md5
docs/doxygen_html/html/dd/d0e/: constants_8h__dep__incl.md5
docs/doxygen_html/html/dd/d1f/: classCircuit.html  classCircuit_a0da93ddbff8c3a110b28836e1f7d7168_icgraph.md5  classCircuit_a1a0b0da930dda0cbdcb834057002d1a8_icgraph.md5  classCircuit_a32479793ee3828e2b17c6b3009ac4f58_icgraph.md5  classCircuit_a45b300a1b0a337c6bc59f61c6e576f54_icgraph.md5  classCircuit_a4825cfabbf2009d39a8908c868aa3087_icgraph.md5  classCircuit_a496d4ef9d39e23a7f3599170d95bbc28_icgraph.md5  classCircuit_a589ac559ffe9cbd7fe6f34a2e67b9fbb_cgraph.md5  classCircuit_a76534d4c622ebf602a6a82d5950a0841_icgraph.md5  classCircuit_a77e630f3c6c0fd42f3945c16b6542cd0_cgraph.md5  classCircuit_a77e630f3c6c0fd42f3945c16b6542cd0_icgraph.md5  classCircuit_a85a2389b7f88de9d21923fc4367301d2_cgraph.md5  classCircuit_a8b94fa2265023eed4a37ae815ea9ffa4_icgraph.md5  (+13 more)
docs/doxygen_html/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  (+46 more)
hooks/: README.md  install.sh  pre-commit
include/: CCircuit.h  CSimulator.h  CUnit.h  Config.h  Genetic_Algorithm.h  circuit_vector.h  constants.h
plotting/: CMakeLists.txt  README.md  circuit_results.csv  cplot.cpp  main.py  plot.py  requirements.txt  viz_extension.py  web.py
rng_examples/: basic_rand.cpp  fast_random.cpp  race_random.cpp  slow_random.cpp
src/: CCircuit.cpp  CMakeLists.txt  CSimulator.cpp  CUnit.cpp  Genetic_Algorithm.cpp  main.cpp  test_genetic_algorithm.cpp
tests/: CMakeLists.txt  test_circuit_simulator.cpp  test_genetic_algorithm.cpp  test_validity_checker.cpp
(+21 files in other folders)
